ec2/ec2-ebs/security.tf
resource "aws_security_group" "allow_rdp_vpcA_regiao1" {
  provider = aws.primary

  vpc_id = data.aws_vpc.default.id
  description = "Regra para RDP e HTTP"
  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"          # "-1" representa todos os protocolos
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_key_pair" "keyPair_regiao_1" {
  key_name   = "minhaChaveSSH"
  public_key = "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDgB7iyR12RnVlEKe9w+mbY0Miug50eAIKSow8zUO2tG7ATlfmT12ZmCb2VYySFxn+a/DN4+adHuC1xnXIAlpJnDZCr18hdsZchO/gxya51D18nZIk2ex54x7G9a7hRrCRP+ARzDpEQPxeooVqe62MA10eUAb0GkLBeBVfgh4s+9n7x0pDuYkQ0ZqsEy5cVnfjrZjIgyKpuWNEBMOMGy0e3M47rgxT3PYLZcc0KtdsSoulCOWS90IUx38j4RxqhTSsOC/QBVVnOtHC9etD+Jw7SzIjgG4vDmjUZu2VqeWRExv2csGjGB6r/Z2uequ/ETqAYMUjtRhAByJ1JafPcLIp3pnXEbduCxYQ9Lk7w6Oxb32ZCJ9vtlJMtNwNKp12dFinmi1UZZyvwxFC6ZsOP8fCX8f7HIzY97KLmaJ51jlJQPKa4GFIGTL0faSF5w8Qg [...]

  provider = aws.primary
}
